# luban

./: .env.development  .gitignore  Cargo.toml  README.md  build.rs  rustfmt.toml
docker/: Dockerfile  build.sh
migration/src/: lib.rs  m20220418_000001_create_project_table.rs  m20220419_000001_create_prototype_table.rs
src/: config.rs  error.rs  lib.rs  main.rs
src/api/: api_tags.rs  auth.rs  mod.rs  project.rs  prototype.rs
src/api/model/: auth.rs  mod.rs
src/entity/: mod.rs  prelude.rs  project.rs  prototype.rs
src/server/: mod.rs  response.rs  state.rs
src/server/endpoint/: domain.rs
src/util/: ldap.rs
web/: index.html  package-lock.json  package.json  vite.config.js
web/src/: main.js  routes.js
web/src/utils/: http.js
web/src/views/: Home.vue  Login.vue
