[workspace]
members = [".", "migration"]

[package]
name = "luban"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
color-eyre = "0.5"
dotenv = "0.15"
once_cell = "1.10"
tokio = { version = "1.17.0", features = ["full"] }
poem = { version = "^1.3", features = ["static-files", "session"] }
poem-openapi = { version = "^1.3", features = ["swagger-ui"] }
thiserror = "1.0"
tracing = "^0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
ldap3 = "0.10.3"
nanoid = "0.4.0"
sea-orm = { version = "^0", features = [ "sqlx-postgres", "runtime-tokio-rustls", "debug-print", "macros" ] }
migration = { path = "migration" }

